[project]
name = "boruvkas-algorithm"
version = "0.1.0"
description = "An implementation of Boruvka's algorithm to find a minimum spanning tree in a graph."
authors = [
    { name = "Isaac Cheng", email = "47993930+IsaacCheng9@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["matplotlib>=3.8.2", "networkx>=3.2.1"]


[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "isort>=5.13.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "coverage>=7.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src/boruvkas_algorithm"]
omit = ["tests/*"]
